2017-01-25  Richard Biener  <rguenther@suse.de>

PR tree-optimization/69264
	* target.def (vector_alignment_reachable): Improve documentation.
	* doc/tm.texi: Regenerate.
	* targhooks.c (default_builtin_vector_alignment_reachable): Simplify
	and add a comment.
	* tree-vect-data-refs.c (vect_supportable_dr_alignment): Revert
	earlier changes with respect to TYPE_USER_ALIGN.
	(vector_alignment_reachable_p): Likewise.  Improve dumping.

	* g++.dg/torture/pr69264.C: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@244897 138bc75d-0d04-0410-961f-82ee72b054a4